# datamesh-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  test_discovery.py
.github/: PULL_REQUEST_TEMPLATE.md
datamesh-ai-core/: pyproject.toml  requirements.txt
datamesh-ai-core/datamesh_ai_core/: __init__.py  a2a.py  agent.py  contracts.py  models.py  registry.py  tracing.py
datamesh-ai-core/schemas/: catalog.lineage.input.json  catalog.lineage.output.json  catalog.resolve.input.json  catalog.resolve.output.json  governance.authorize.input.json  governance.authorize.output.json  governance.redact.input.json  governance.redact.output.json  sql.explain.input.json  sql.explain.output.json  sql.generate.input.json  sql.generate.output.json  sql.optimize.input.json  sql.optimize.output.json
datamesh-ai-core/src/datamesh_ai_core/: __init__.py
datamesh-ai-core/src/datamesh_ai_core/a2a/: __init__.py  client.py  message.py
datamesh-ai-core/src/datamesh_ai_core/discovery/: __init__.py  aws_enhancements.py  azure_enhancements.py  catalogs.py  cli.py  connectors.py  gcp_enhancements.py  partitioning.py  snowflake_discovery.py  sources.py  unified.py
datamesh-ai-core/src/datamesh_ai_core/governance/: __init__.py  config.py  factory.py  interfaces.py  unified.py
datamesh-ai-core/src/datamesh_ai_core/governance/providers/: __init__.py  aws.py  azure.py  databricks.py  gcp.py  local.py
datamesh-ai-core/src/datamesh_ai_core/lifecycle/: __init__.py  manager.py
datamesh-ai-core/src/datamesh_ai_core/registry/: __init__.py  contract.py  registry.py
datamesh-ai-core/src/datamesh_ai_core/tracing/: __init__.py  context.py  spans.py
(+82 files in other folders)
