[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamesh-ai-core"
version = "1.0.0"
description = "DATAMESH.AI Core - Agent lifecycle, registry, A2A messaging, and tracing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "DATAMESH.AI Team", email = "team@datamesh.ai" }
]
keywords = ["datamesh", "agents", "a2a", "data-platform", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/datamesh-ai/datamesh-ai-core"
Documentation = "https://datamesh.ai/docs"
Repository = "https://github.com/datamesh-ai/datamesh-ai-core"

[tool.hatch.build.targets.wheel]
packages = ["src/datamesh_ai_core"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
